# conversation_simulator

./: .env  .gitignore  README.md  pyproject.toml
converse/: agent.py  conversation.py  converse.py  handle.py  persona.py  prompts.py  utils.py
converse/conversations/: ai-lab-debate
converse/conversations/ai-debate/: ai-lab-debate-gpt3.5  ai-lab-debate-gpt3.5.md  ai-lab-debate-gpt4.md
converse/conversations/ai-predictions/: agi-6-monthly  government  government.md  md-test.md  prediction-subagents.html
converse/conversations/prediction/: 1-agi-6-monthly.md  15-china-len-30-cont  15-china-len-30.md  2-agi-government.md
converse/conversations/prediction-subagents/: 12-subagent-len-16.md  13-subagent-no-gov-len-30.md
converse/conversations/prediction_subagents/: 10-subagent-output-formatting.md  10-subagent-output.md  11-subagent-len-20.md  12-subagent-len-30-raw  12-subagent-len-30.md  13-subagent-no-gov-len-20.md  13-subagent-no-gov-len-30.md  14-subagent-china-len-20-1.md  14-subagent-china-len-20-cont  14-subagent-china-len-20.md  9-subagent-output.md
converse/conversations/prediction_subagents/8-deliberate.md/: 8-deliberate.md
tests/: conftest.py  conversation  test_agent.py  test_conversation.py
