[tool.poetry]
name = "converse"
version = "0.1.0"
description = ""
authors = ["Stuart Jennings <stuart.jennings@bbc.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.28.1"
tenacity = "^8.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
